Fix for jump to source file line

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -242,6 +242,11 @@ h6
 	border-left: 3px #ddd solid;
 }
 
+.prettyprint code span
+{
+  display: inline-block;
+}
+
 .params, .props
 {
 	border-spacing: 0;
